Added logs for all callbacks of activity and of fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Lifecycle</string>
+    <string name="check_logcat">Please check your logcat in Android Studio, lifecycle messages should be in red.</string>
 </resources>
